# seriousum

./: .clippy-baseline.jsonl  AGENTS.md  CILIUM_INTEGRATION_READY.md  CNI_SOCKET_TIMING_INVESTIGATION.md  CNI_SOCKET_TIMING_README.md  CNI_SOCKET_TIMING_SUMMARY.md  COMPLIANCE_CERTIFICATION.md  CRD_SYNC_VERIFICATION_REPORT.md  Cargo.toml  EXECUTION_SUMMARY.md  FINAL_VERIFICATION.txt  GROUP_2_FINAL_SUMMARY.md  GROUP_4_CILIUM_INTEGRATION_READY.md  GROUP_4_COMPLETION_CHECKLIST.md  GROUP_4_COMPLETION_SUMMARY.md  GROUP_4_EXECUTION_PROGRESS.md  GROUP_4_FINAL_STATUS.md  INTEGRATION_GATES_ENVIRONMENT_CONSTRAINTS.md  INTEGRATION_GATES_EXECUTION_PLAN.md  INTEGRATION_TEST_FINDINGS.md  JUSTFILE_EXAMPLES.md  JUSTFILE_FIXES.md  P0_EXECUTION_QUICK_START.md  P0_IMPLEMENTATION_PLAN.md  PARALLEL_IMPLEMENTATION_SESSION_COMPLETE.md  PORTING.md  PROGRESS_SNAPSHOT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_v0.1.0-alpha.md  ROOT_CAUSES_AND_FIXES.md  SERVICE_DEBUG_INDEX.md  SERVICE_IMPLEMENTATION_SPEC.md  SERVICE_SUBSYSTEM_DEBUG_REPORT.md  SERVICE_SUBSYSTEM_FINDINGS.md  SESSION_2_SUMMARY.md  SESSION_3_FINAL_HANDOFF.md  SESSION_3_PHASE_1_FINAL_STATUS.md  SESSION_3_PHASE_2_SETUP.md  (+24 more)
.github/workflows/: benchmarks.yaml  ci.yml  (+5 more)
benches/: endpoint.rs  fqdn.rs  hubble.rs  identity.rs  ipam.rs  load_balancer.rs  policy_eval.rs
cilium-compliance-results/: COMPLETE_COMPLIANCE_REPORT.md  ginkgo-suites.txt  test-discovery.txt  unit-tests-output.txt
cilium-test-results/: K8sAgentPolicyTest-results.txt
crates/api/: Cargo.toml
crates/api/src/: errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  server.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: connectivity.rs  endpoint.rs  flow.rs  lib.rs  main.rs  policy.rs  status.rs  test_main.rs
crates/cni/: Cargo.toml
crates/cni/src/: lib.rs  main.rs  plugin.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  main.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  controller.rs  ebpf.rs  error.rs  hive.rs  identity.rs  lib.rs  main.rs  net.rs  time.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: health.rs  lib.rs  loadbalancer.rs  main.rs  runtime.rs
crates/datapath/: Cargo.toml
crates/datapath/src/: lib.rs  main.rs
crates/dbg/: Cargo.toml
crates/dbg/src/: lib.rs  main.rs  output.rs
crates/dbg/src/commands/: bpf.rs  endpoint.rs  mod.rs  policy.rs  service.rs
crates/ebpf/: Cargo.toml
crates/ebpf/src/: core_maps.rs  lib.rs  main.rs  maps.rs
crates/egressgateway/: Cargo.toml  README.md
crates/egressgateway/src/: endpoint.rs  error.rs  event.rs  gateway.rs  lib.rs  manager.rs  policy.rs  reconcile.rs  types.rs
crates/endpoint/: Cargo.toml
crates/endpoint/src/: lib.rs  lifecycle.rs  main.rs  manager.rs
crates/envoy/: Cargo.toml
crates/envoy/src/: lib.rs  main.rs
crates/fqdn/: Cargo.toml
crates/fqdn/src/: cache.rs  dns.rs  error.rs  lib.rs  main.rs  model.rs  policy.rs  proxy.rs  types.rs
crates/hubble/: Cargo.toml
crates/hubble/src/: lib.rs  main.rs
crates/hubble/src/relay/: defaults.rs  mod.rs  observer.rs  queue.rs  server.rs
crates/hubble/src/relay/pool/: backoff.rs  mod.rs  types.rs
crates/identity/: Cargo.toml
crates/identity/src/: allocation.rs  ipcache.rs  lib.rs  main.rs
crates/ipam/: Cargo.toml
crates/ipam/src/: lib.rs  main.rs
crates/k8s/: Cargo.toml
crates/k8s/src/: lib.rs  main.rs  watcher.rs
crates/kvstore/: Cargo.toml
crates/kvstore/src/: lib.rs  main.rs
crates/loadbalancer/: Cargo.toml
crates/loadbalancer/src/: lib.rs  main.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  main.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: agent.rs  api.rs  events.rs  lib.rs  main.rs  payload.rs  scaffold.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  main.rs  types.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs
crates/operator/: Cargo.toml
crates/operator/src/: lib.rs  main.rs
crates/policy/: Cargo.toml
crates/policy/src/: cidr.rs  error.rs  l4.rs  lib.rs  main.rs  mapstate.rs  repository.rs  rule.rs  selector.rs
crates/service-observer/: Cargo.toml
crates/service-observer/src/: lib.rs
crates/wireguard/: Cargo.toml
crates/wireguard/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CILIUM_EXAMPLES_COMPATIBILITY.md  CILIUM_TEST_COMPATIBILITY_STRATEGY.md  COMPREHENSIVE_VALIDATION.md  DEVELOPER_GUIDE.md  DISTRIBUTION_STRATEGY.md  FULL_TEST_SUITE_CATALOG.md  GUIDE.md  INDEX.md  INSTALLATION.md  INTEGRATION_TEST_BENCHMARKS.md  INTEGRATION_TEST_RESULTS.md  P1_IMPLEMENTATION_EXECUTION_PLAN.md  P1_IMPLEMENTATION_SUMMARY.md  P1_VALIDATION_IN_PROGRESS.md  PARALLEL_TRANSITION_GUIDE.md  PARITY_PROOF.md  PARITY_PROOF_DASHBOARD.md  RUST_OPERATOR_IMPLEMENTATION.md  SPEED_COMPARISON.md  TROUBLESHOOTING.md  V0_1_0_RELEASE_PLAN.md  cilium-dropin-testing.md  cilium-integration-images.md  cilium-kind-matrix.md  component-porting-compliance.md  operator-image-fix.md  parity-matrix.md
images/: agent.Dockerfile  build-cilium-images.sh  cilium-agent.Dockerfile  cilium-cli.Dockerfile  cilium-dbg.Dockerfile  cilium.Dockerfile  clustermesh-apiserver.Dockerfile  hubble.Dockerfile  operator.Dockerfile  tools.Dockerfile
scripts/: benchmark.sh  build-cilium-dropin.sh  build-containers.sh  build-release.sh  check-component-porting-compliance.sh  check-parity-proof.sh  cleanup-parallel.sh  collect-parallel-results.sh  diagnose-cni-socket-timing.sh  group4-complete-merge.sh  group4-finalize.sh  group4-merge.sh  prepare-cilium-kubectl.sh  profile-cilium-startup.sh  publish-images.sh  push-images-to-ghcr.sh  run-cilium-integration-tests.sh  run-cilium-kind-matrix.sh  run-cilium-kind-test-with-upstream-operator.sh  run-cilium-kind-test.sh  run-cilium-sequential-suites.sh  run-full-compliance-tests.sh  run-parallel-test-suites.sh  run-parity-tests.sh  setup-ghcr-images.sh  start-parallel-p1.sh  verify-harness-configuration.sh  verify-p0-status.sh
src/: main.rs
(+50 files in other folders)
