[package]
name = "seriousum"
version = "0.1.0"
edition = "2024"
description = "A complete Rust rewrite of Cilium — eBPF-based networking, observability, and security"
license = "Apache-2.0"
repository = "https://github.com/seriousum/seriousum"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
seriousum_cli = { path = "crates/cli", package = "seriousum-cli" }
seriousum_daemon = { path = "crates/daemon", package = "seriousum-daemon" }
seriousum_hubble = { path = "crates/hubble", package = "seriousum-hubble" }
seriousum_clustermesh = { path = "crates/clustermesh", package = "seriousum-clustermesh" }
seriousum_operator = { path = "crates/operator", package = "seriousum-operator" }

[workspace]
members = [
    "crates/core",
    "crates/ebpf",
    "crates/datapath",
    "crates/network",
    "crates/policy",
    "crates/loadbalancer",
    "crates/endpoint",
    "crates/identity",
    "crates/k8s",
    "crates/ipam",
    "crates/node",
    "crates/hubble",
    "crates/clustermesh",
    "crates/bgp",
    "crates/fqdn",
    "crates/envoy",
    "crates/metrics",
    "crates/monitor",
    "crates/auth",
    "crates/proxy",
    "crates/wireguard",
    "crates/cni",
    "crates/cli",
    "crates/operator",
    "crates/daemon",
    "crates/api",
    "crates/config",
    "crates/crypto",
    "crates/kvstore",
    "crates/controller",
    "crates/service-observer",
    "crates/backend-mapping",
    "crates/policy",
    "crates/endpoints",
    "crates/loadbalancer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

# --- Workspace dependencies (shared versions) ---
[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Networking
socket2 = "0.5"
ipnet = { version = "2", features = ["serde"] }
dns-lookup = "2"

# eBPF (Aya — the Rust eBPF framework)
aya = { version = "0.13", package = "aya" }
aya-obj = { version = "0.2", package = "aya-obj" }
aya-build = { version = "0.1", package = "aya-build" }
aya-log = { version = "0.1", package = "aya-log" }

# Kubernetes
kube = { version = "0.98", features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
yaml-rust2 = "0.9"

# Logging / tracing
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"
seriousum-core = { path = "crates/core" }
seriousum-api = { path = "crates/api" }
seriousum-cli = { path = "crates/cli" }

# Misc utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
once_cell = "1"
bytes = "1"
bitflags = "2"
libc = "0.2"

# Crypto
ring = "0.17"
rustls = "0.23"
tokio-rustls = "0.26"

# Metrics / observability
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Key-value store
tikv-jemallocator = "0.6"

# --- Workspace lints ---
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_wraps = "allow"
default_trait_access = "allow"
default_constructed_unit_structs = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
arc_with_non_send_sync = "allow"
map_unwrap_or = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
unused_imports = "warn"
dead_code = "warn"
