[package]
name = "seriousum-api"
version.workspace = true
edition.workspace = true

[dependencies]
seriousum-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror = "2"
anyhow.workspace = true
once_cell.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
utoipa = { workspace = true, features = ["axum_extras"] }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
