[package]
name = "seriousum-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
seriousum-api = { path = "../api" }
seriousum-config = { path = "../config" }
seriousum-core = { workspace = true }
seriousum-operator = { path = "../operator" }

[lints]
workspace = true
