[package]
name = "seriousum-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
seriousum-config = { path = "../config" }
seriousum-core = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
thiserror = "2"
tracing.workspace = true
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = "6"

[lints]
workspace = true
