[package]
name = "seriousum-cni"
version.workspace = true
edition.workspace = true

[dependencies]
ipnet = { workspace = true }
ring.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
thiserror = "2"
tracing = { workspace = true }

[lints]
workspace = true
