[package]
name = "seriousum-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and utilities for seriousum"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
ipnet.workspace = true
bitflags.workspace = true
chrono.workspace = true
once_cell.workspace = true
tracing.workspace = true
uuid.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
lazy_static.workspace = true

[lints]
workspace = true
