[package]
name = "seriousum-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
seriousum-core = { workspace = true }
anyhow.workspace = true
ring.workspace = true
rustls.workspace = true
rustls-pemfile = "2"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
