[package]
name = "cilium-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
seriousum-core = { workspace = true }
seriousum-config = { path = "../config" }
cilium-kvstore = { path = "../kvstore" }
seriousum-crypto = { path = "../crypto" }
anyhow.workspace = true
thiserror = "2"
async-trait = "0.1"
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures.workspace = true
once_cell = "1.19"
dashmap = "6"

[lints]
workspace = true
