[package]
name = "cilium-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
seriousum-core = { workspace = true }
seriousum-config = { path = "../config" }
cilium-kvstore = { path = "../kvstore" }
cilium-k8s = { path = "../k8s" }
seriousum-crypto = { path = "../crypto" }
anyhow.workspace = true
thiserror = "2"
async-trait = "0.1"
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures.workspace = true
once_cell = "1.19"
dashmap = "6"

[lints]
workspace = true
