[package]
name = "seriousum-datapath"
version.workspace = true
edition.workspace = true

[features]
privileged = []

[dependencies]
seriousum-core = { workspace = true }
thiserror = "2"
dashmap = "6"
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }


[lints]
workspace = true
