[package]
name = "seriousum-dbg"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "cilium-dbg CLI porting — debugging commands for Cilium internals"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
ipnet.workspace = true
thiserror = "2"
bytes.workspace = true
libc = "0.2"

# For table formatting
comfy-table = "7"

# For structured output
tabwriter = "1.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "cilium-dbg"
path = "src/main.rs"
