[package]
name = "seriousum-ebpf"
version.workspace = true
edition.workspace = true

[features]
privileged = []

[dependencies]
thiserror = "2"
dashmap = "6"
num_cpus = "1.16"
tracing = { workspace = true }
seriousum-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"


[lints]
workspace = true
