[package]
name = "seriousum-egressgateway"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
anyhow = { workspace = true }
dashmap = "6"
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
tracing = { workspace = true }
ipnet = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
fnv = "1.0"
parking_lot = "0.12"
futures = { workspace = true }
scopeguard = "1.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3"

[lints]
workspace = true
