[package]
name = "cilium-egressgateway"
version.workspace = true
edition.workspace = true

[dependencies]
ipnet = { workspace = true }
thiserror = "2"
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
