[package]
name = "seriousum-endpoint"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
seriousum-api = { workspace = true }

[lints]
workspace = true
