[package]
name = "cilium-endpoint"
version.workspace = true
edition.workspace = true

[lib]
name = "seriousum_endpoint"

[dependencies]
thiserror = "2"
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
