[package]
name = "seriousum-envoy"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
