[package]
name = "seriousum-fqdn"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
seriousum-core = { workspace = true }
thiserror = "2.0"
dashmap = "6.0"
tokio = { workspace = true, features = ["net", "time", "sync"] }
tracing = { workspace = true }
ipnet = { workspace = true }
regex = "1.10"
anyhow = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
