[package]
name = "seriousum-identity"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
ipnet = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
seriousum-api = { workspace = true }

[lints]
workspace = true
