[package]
name = "seriousum-ipam"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
seriousum-api = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = "2"
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
ipnet = { workspace = true }
dashmap = "6"

[lints]
workspace = true
