[package]
name = "cilium-k8s"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = "2"
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }

[lints]
workspace = true
