[package]
name = "seriousum-kvstore"
version.workspace = true
edition.workspace = true

[dependencies]
seriousum-core = { workspace = true }
anyhow.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
