[package]
name = "cilium-kvstore"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

[lints]
workspace = true
