[package]
name = "seriousum-loadbalancer"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
seriousum-api = { workspace = true }
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"
dashmap = "6.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }


[lints]
workspace = true
