[package]
name = "seriousum-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
thiserror = "2"
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = "6"

[lints]
workspace = true
