[package]
name = "cilium-monitor"
version.workspace = true
edition.workspace = true

[lib]
name = "seriousum_monitor"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
seriousum-api = { workspace = true }
thiserror = "2"
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
