[package]
name = "cilium-network"
version.workspace = true
edition.workspace = true

[dependencies]
ipnet = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
seriousum-api = { workspace = true }
thiserror = "2"
tracing = { workspace = true }

[lints]
workspace = true
