[package]
name = "seriousum-node"
version.workspace = true
edition.workspace = true

[dependencies]
ipnet = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2"
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[lints]
workspace = true
