[package]
name = "seriousum-operator"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
seriousum-api = { path = "../api" }
seriousum-core = { workspace = true, optional = true }

[lints]
workspace = true
