[package]
name = "seriousum-policy"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
seriousum-api = { workspace = true }
thiserror = "2"
dashmap = "6"
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lints]
workspace = true
