[package]
name = "cilium-policy"
version.workspace = true
edition.workspace = true

[lib]
name = "seriousum_policy"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
ipnet = { workspace = true }

[lints]
workspace = true
