[package]
name = "service-observer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
kube = "0.90"
k8s-openapi = "0.20"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
