[package]
name = "service-observer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
kube = { workspace = true }
k8s-openapi = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
