[package]
name = "seriousum-wireguard"
version.workspace = true
edition.workspace = true

[features]
privileged = []

[dependencies]
ipnet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
seriousum-core = { workspace = true }
thiserror = "2"
tracing = { workspace = true }

[lints]
workspace = true
